tests/lean/defInst.lean.expected.out
[4, 5, 6]
defInst.lean:8:26-8:32: error: failed to synthesize
  BEq Foo
Additional diagnostic information may be available using the `set_option diagnostics true` command.
fun x y => sorry : (x y : Foo) → ?m x y
[4, 5, 6]
fun x y => x == y : Foo → Foo → Bool
[("hello", "hello")]
false
true
true
def instMMonad : Monad M :=
ReaderT.instMonad
